feat(reports): adds the report generation